--- a/views/404.ejs
+++ b/views/404.ejs
@@ -12,7 +12,7 @@
 <div class="not-found">
     <h1 class="h1-404">404</h1>
     <p class="p-404">Oops! Something is wrong.</p>
-    <a class="button-404" href="/"><i class="icon-home"></i> Go back in initial page, is better.</a>
+    <a class="button-404" href="/admin"><i class="icon-home"></i> Go back in initial page, is better.</a>
 </div>
 </body>
 </html>
