--- a/views/admin/pending.ejs
+++ b/views/admin/pending.ejs
@@ -122,7 +122,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Yopish</button>
-                                        <a href="/admin/pending/delete/<%=item.announcement_id%>" type="button" class="btn btn-danger">Bekor qilish</a>
+                                        <a href="/admin/pending/delete/<%=item.announcement_id%>" type="button" class="btn btn-danger"><i class="fa-solid fa-trash"></i> O'chirish</a>
                                         <a href="/admin/pending/confirm/<%=item.announcement_id%>" type="button" class="btn btn-success">Tasdiqlash</a>
                                     </div>
                                 </div>
