--- a/views/admin/components/sidebar.ejs
+++ b/views/admin/components/sidebar.ejs
@@ -18,10 +18,10 @@
                 <div class="sb-nav-link-icon"><i class="fa-solid fa-clock"></i></div>
                 Kutilayotgan E'lonlar
             </a>
-            <a class="nav-link" href="/admin/messages">
-                <div class="sb-nav-link-icon"><i class="fa-solid fa-message"></i></div>
-                Xabarlar
-            </a>
+<!--            <a class="nav-link" href="/admin/chat">-->
+<!--                <div class="sb-nav-link-icon"><i class="fa-solid fa-message"></i></div>-->
+<!--                Xabarlar-->
+<!--            </a>-->
             <a class="nav-link" href="/admin/ads">
                 <div class="sb-nav-link-icon"><i class="fa-solid fa-bullhorn"></i></div>
                 Reklama
