--- a/views/admin/user-posts.ejs
+++ b/views/admin/user-posts.ejs
@@ -1,4 +1,4 @@
-<% var announcement, totalCount, title, message, p_page, c_page %>
+<% var user, announcements, totalCount, c_page, p_page, message %>
 <%- include('components/header') %>
 
 <%- include('components/navbar') %>
@@ -17,21 +17,21 @@
                     </div>
                 <% } %>
                 <h4 class="my-4"> <%= title %></h4>
+
                 <div class="row">
-                    <% if(announcement?.length !== 0) { %>
-                        <% for(let item of announcement) { %>
+                    <% if(announcements?.length !== 0) { %>
+                        <% for(let item of announcements) { %>
                             <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
                                 <!-- Card-->
                                 <div class="card shadow-sm border-0 rounded mb-3">
-                                    <div class="card-body p-0" >
-                                        <img src="<%= item.thumb[0] %>" alt="" class="w-100 card-img-top">
+                                    <div class="card-body p-0"><img src="<%= item.thumb[0] %>" alt="" class="w-100 card-img-top">
                                         <div class="p-4">
                                             <h5 class="mb-0"><%= item.title %></h5>
                                             <p class="small text-muted"><%= item.city %> <%= item.district %></p>
                                             <% var dateObj = new Date(item.createdAt); %>
-                                            <p class="small text-muted"><%= dateObj.getDate() %>-<%= dateObj.getMonth() + 1 %>-<%= dateObj.getFullYear() %>  </p>
+                                            <p class="small text-muted"><%= dateObj.getDate() %>-<%= dateObj.getMonth() + 1 %>-<%= dateObj.getFullYear() %> <% if (item.rec) { %><i class="fa-solid fa-star" style="color: #fbff00;"></i><% } %> </p>
                                             <div class="card-footer d-flex align-items-center justify-content-between">
-                                                <a class="small stretched-link" type="button" data-bs-toggle="modal" data-bs-target="#<%=item.slug%>">Barchasini ko'rish</a>
+                                                <a class="small stretched-link" type="button" data-bs-toggle="modal" data-bs-target="#<%=item.slug%>" >Barchasini ko'rish</a>
                                                 <div class="small"><i class="fas fa-angle-right"></i></div>
                                             </div>
                                         </div>
@@ -40,11 +40,11 @@
                             </div>
 
                         <% } %>
-                        <% } else { %>
-                            <div class="align-items-center justify-content-center">
-                                <h4 class="text-center">E'lonlar mavjud emas</h4>
-                            </div>
-                        <% } %>
+                    <% } else { %>
+                        <div class="align-items-center justify-content-center">
+                            <h4 class="text-center">E'lonlar mavjud emas</h4>
+                        </div>
+                    <% } %>
                 </div>
 
 
@@ -56,15 +56,15 @@
 
                         <% for (let i = 0; i < Math.ceil(totalCount / 8); i++) { %>
                             <li class="page-item">
-                                <a class="page-link" href="/admin/pending?c_page=<%= i + 1 %>&p_page=8" data-category-page="<%= i + 1%>"><%= i + 1 %></a>
+                                <a class="page-link" href="/admin/users/posts/<%=user.user_id%>?c_page=<%= i + 1 %>&p_page=8" data-category-page="<%= i + 1%>"><%= i + 1 %></a>
                             </li>
                         <% } %>
 
                     </ul>
                 </div>
 
-                <% if(announcement?.length !== 0) { %>
-                    <% for(let item of announcement) { %>
+                <% if(announcements?.length !== 0) { %>
+                    <% for(let item of announcements) { %>
                         <!-- Modal -->
                         <div class="modal fade" id="<%= item.slug %>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog modal-dialog-scrollable modal-lg">
@@ -106,22 +106,24 @@
                                                     <p class="small text-muted">Manzil: <%= item.address %></p>
                                                     <p class="small text-muted">Turi: <%= item.type %></p>
                                                     <p class="small text-muted">Ma'lumot: <%= item.description %></p>
-                                                    <h5>Narx: <%= item.price %> so'm</h5>
+                                                    <h5  class="small text-muted">Telefon: +<%= item.phone %></h5>
+                                                    <h5>Narx: <%= item.price %> <% if(item.price_type === "sum") { %> so'm <% } else { %> $ <% } %></h5>
+                                                    <h5>Holati: <% if (item.status) {%> Faol <% } else { %> Nofaol <% } %> </h5>
+                                                    <p><i class="fa-solid fa-heart" style="color: #e70d0d;"></i> <%=item.likeCount%>&emsp;<i class="fa-solid fa-eye" style="color: #135bd8;"></i> <%=item.viewCount%></p>
                                                     <% var dateObj = new Date(item.createdAt); %>
-                                                    <p class="small text-muted"><%= dateObj.getDate() %>-<%= dateObj.getMonth() + 1 %>-<%= dateObj.getFullYear() %></p>
-<!--                                                    <form class="mb-3" action="/message/<%=item.announcement_id%>">-->
-<!--                                                            <label for="exampleFormControlTextarea1" class="form-label">Xabar yuborish</label>-->
-<!--                                                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="2" name="message"></textarea>-->
-<!--                                                            <button class="btn btn-primary mt-1">Yuborish</button>-->
-<!--                                                    </form>-->
+                                                    <p class="small text-muted">Sana: <%= dateObj.getDate() %>-<%= dateObj.getMonth() + 1 %>-<%= dateObj.getFullYear() %>  </p>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Yopish</button>
-                                        <a href="/admin/pending/delete/<%=item.announcement_id%>" type="button" class="btn btn-danger"><i class="fa-solid fa-trash"></i> O'chirish</a>
-                                        <a href="/admin/pending/confirm/<%=item.announcement_id%>" type="button" class="btn btn-success">Tasdiqlash</a>
+                                        <% if (item.rec) { %>
+                                        <a href="/admin/announcements/rec/<%=item.announcement_id%>?c_page=<%=c_page%>&p_page=<%=p_page%>" type="button" class="btn btn-warning">Tavsiyadan o'chirish</a>
+                                        <% } else { %>
+                                        <a href="/admin/announcements/rec/<%=item.announcement_id%>?c_page=<%=c_page%>&p_page=<%=p_page%>" type="button" class="btn btn-success">Tavsiya</a>
+                                        <% } %>
+                                        <a href="/admin/announcements/delete/<%=item.announcement_id%>" type="button" class="btn btn-danger"><i class="fa-solid fa-trash"></i> O'chirish</a>
                                     </div>
                                 </div>
                             </div>
