p_page add home and search route, user posts images size bug fixed

--- a/views/admin/ads.ejs
+++ b/views/admin/ads.ejs
@@ -73,7 +73,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Yopish</button>
-                                        <button type="submit" class="btn btn-primary">Yaratish</button>
+                                        <button type="submit" class="btn btn-primary" disabled>Yaratish</button>
                                     </div>
                                 </form>
 
