--- a/views/admin/user-posts.ejs
+++ b/views/admin/user-posts.ejs
@@ -24,7 +24,7 @@
                             <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
                                 <!-- Card-->
                                 <div class="card shadow-sm border-0 rounded mb-3">
-                                    <div class="card-body p-0"><img src="<%= item.thumb[0] %>" alt="" class="w-100 card-img-top">
+                                    <div class="card-body p-0"><img src="<%= item.thumb[0] %>" alt="" class="w-100 card-img-top" style="height: 190px ">
                                         <div class="p-4">
                                             <h5 class="mb-0"><%= item.title %></h5>
                                             <p class="small text-muted"><%= item.city %> <%= item.district %></p>
