--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -21,10 +21,17 @@
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                     </div>
                 <% } %>
-                <h4 class="my-4"> <%= title %></h4>
-                <!--                <ol class="breadcrumb mb-4">-->
-                <!--                    <li class="breadcrumb-item active"><%= title %></li>-->
-                <!--                </ol>-->
+
+                    <div class="d-flex my-4">
+                        <h4> <%= title %></h4>
+                        <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
+                            <div class="input-group">
+                                <input class="form-control" type="text" placeholder="Search for..." aria-label="Search for..." aria-describedby="btnNavbarSearch" />
+                                <button class="btn btn-primary" id="btnNavbarSearch" type="button"><i class="fas fa-search"></i></button>
+                            </div>
+                        </form>
+                    </div>
+
                 <div class="container table-responsive">
                     <table class="table table-striped table-hover">
                         <thead>
