--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -18,11 +18,11 @@
             <div class="alert alert-danger text-center mb-2"><%= error.substring(6) %></div>
         <% } %>
         <div class="form-floating">
-            <input type="text" class="form-control" id="floatingInput" placeholder="Login" name="phone">
+            <input type="text" class="form-control" id="floatingInput" placeholder="Login" name="phone" value="998905210501">
             <label for="floatingInput">Login</label>
         </div>
         <div class="form-floating">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
+            <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password" value="password123">
             <label for="floatingPassword">Password</label>
         </div>
         <button class="w-100 btn btn-lg btn-primary" type="submit">Login</button>
